# m_ads

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/multimodal_ds/: cli.py  config.py  graph.py
src/multimodal_ds/agents/: __init__.py  code_execution_agent.py  evaluation_agent.py  planner_agent.py  reporter.py  statistical_agent.py  visualization_agent.py
src/multimodal_ds/api/: app.py
src/multimodal_ds/core/: llm_client.py  message_bus.py  observability.py  pii_guard.py  schema.py  state.py
src/multimodal_ds/frontend/: __init__.py  streamlit_app.py  ui_bus_adapter.py
src/multimodal_ds/ingestion/: audio_ingestion.py  image_ingestion.py  pdf_ingestion.py  pdf_visual_parsing_agent.py  router.py  tabular_ingestion.py
src/multimodal_ds/memory/: agent_memory.py
src/multimodal_ds/tests/: conftest.py  test_graph_nodes.py
tests/: conftest.py  test_code_execution_agent.py  test_eda_direct.py  test_evaluation_agent.py  test_graph_nodes.py  test_graph_pii_and_reviewer.py  test_integration_smoke.py  test_message_bus.py  test_pipeline.py  test_streamlit_app_import.py  test_ui_bus_adapter.py  test_visualization_agent.py
