[project]
name = "multimodal-agentic-ds"
version = "1.0.0"
description = "Multimodal Agentic Data Science Engine — 100% local Ollama, no API keys"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = {text = "MIT"}
authors = [{name = "Ibrahim Mahidpur"}]
keywords = ["ai", "agents", "ollama", "multimodal", "data-science", "langgraph", "local-llm"]

dependencies = [
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-ollama>=0.2.0",
    "litellm>=1.40.0",
    "ollama>=0.3.0",
    "python-dotenv>=1.0.0",
    "pymupdf>=1.24.0",
    "pillow>=10.0.0",
    "openai-whisper>=20231117",
    "transformers>=4.40.0",
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "chromadb>=0.5.0",
    "faiss-cpu>=1.8.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.13.0",
    "statsmodels>=0.14.0",
    "flaml>=2.1.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "plotly>=5.20.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "streamlit>=1.33.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "spacy>=3.7.0",
    "pydantic>=2.0.0",
    "aiofiles>=24.1.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "black>=24.0.0",
]
streamlit = ["streamlit>=1.33.0"]

[project.scripts]
mmads = "multimodal_ds.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/multimodal_ds"]

[tool.ruff]
line-length = 120
target-version = "py312"
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--tb=short"

[tool.coverage.run]
source = ["src/multimodal_ds"]
omit = ["*/tests/*", "*/cli.py"]
